apps/gatus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: gatus
  labels:
    app.kubernetes.io/name: gatus
spec:
  selector:
    app.kubernetes.io/name: gatus
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
